# Dependent-Cxx

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  array-concat.cc  broken-do-not-use.cc  depend.cc  log2.cc
include/dependent-cxx/: algebra.hpp  array.hpp  core-io.hpp  core.hpp
